--- a/index.html
+++ b/index.html
@@ -60,5 +60,8 @@
         </div>
       </main>
     </div>
+    <footer>
+      <p>Challeng by <a>frontendmentor</a>. Coded by <a>cerebro_cerberus</a>.</p>
+    </footer>
   </body>
 </html>
