--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </main>
     </div>
     <footer>
-      <p>Challeng by <a>frontendmentor</a>. Coded by <a>cerebro_cerberus</a>.</p>
+      <p>Challeng by <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA" target="_blank">frontendmentor</a>. Coded by <a href="https://github.com/iamcerebrocerberus/" target="_blank">cerebro_cerberus</a>.</p>
     </footer>
   </body>
 </html>
