--- a/index.html
+++ b/index.html
@@ -11,57 +11,60 @@
     <title>Frontendmentor | social-proof-section-master</title>
   </head>
   <body> 
-    <div class="main-container"> 
-      <main> 
-        <div class="prod"> 
-          <div class="prod-state"> 
-            <h1 class="prod-state__head">10,000+ of our users love our products.</h1>
-            <p class="prod-state__txt">We only provide great products combined with excellent customers service. See what our satisfied customers are saying about our services </p>
-          </div>
-          <div class="prod-rate"> 
-            <ul class="rate">
-              <li><span class="rate__img"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"></span><span class="rate__txt">Rated 5 Stars in Review</span></li>
-              <li><span class="rate__img"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"></span><span class="rate__txt">Rated 5 Stars in Report Guru</span></li>
-              <li><span class="rate__img"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"></span><span class="rate__txt">Rated 5 Stars in BestTech</span></li>
-            </ul>
-          </div>
+    <main> 
+      <section class="prod"> 
+        <div class="prod-statement"> 
+          <h1 class="prod-statement__head">10,000+ of our users love our products. </h1>
+          <p class="prod-statement__txt">We only provide great products combined with excellent customer service. See what our satisfied customer are saying about our services</p>
         </div>
-        <div class="reviews-container"> 
+        <div class="prod-rate"> 
+          <ul> 
+            <li><span class="star__img"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"></span><span class="star__txt">Rated 5 Stars in Reviews</span></li>
+            <li><span class="star__img"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"></span><span class="star__txt">Rated 5 Stars in Report Guru</span></li>
+            <li><span class="star__img"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"><img src="assets/icon-star.svg" alt="star"></span><span class="star__txt">Rated 5 Stars in BestTech</span></li>
+          </ul>
+        </div>
+      </section>
+      <section class="bottom">
+        <div class="reviews"> 
           <div class="card">
-            <div class="card__top">
-              <div> <img src="assets/image-colton.jpg" alt="Colton Smith"></div>
-              <div> 
+            <div class="card-top"> 
+              <div class="card-top__img">
+                 <img src="assets/image-colton.jpg" alt="Colton Smith"></div>
+              <div class="card-top__txt"> 
                 <h2>Colton Smith </h2>
                 <h3>Verified Buyer</h3>
               </div>
             </div>
-            <p>"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"</p>
+            <p class="card-bot">"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"</p>
           </div>
           <div class="card">
-            <div class="card__top">
-              <div> <img src="assets/image-irene.jpg" alt="Irene Roberts"></div>
-              <div> 
+            <div class="card-top"> 
+              <div class="card-top__img">
+                 <img src="assets/image-irene.jpg" alt="Irene Roberts"></div>
+              <div class="card-top__txt"> 
                 <h2>Irene Roberts </h2>
                 <h3>Verified Buyer</h3>
               </div>
             </div>
-            <p>"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</p>
+            <p class="card-bot">"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</p>
           </div>
           <div class="card">
-            <div class="card__top">
-              <div> <img src="assets/image-anne.jpg" alt="Anne Wallace"></div>
-              <div> 
-                <h2>Anne Wallace</h2>
+            <div class="card-top"> 
+              <div class="card-top__img">
+                 <img src="assets/image-anne.jpg" alt="Anne Wallace"></div>
+              <div class="card-top__txt"> 
+                <h2>Anne Wallace </h2>
                 <h3>Verified Buyer</h3>
               </div>
             </div>
-            <p>"Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</p>
+            <p class="card-bot">"Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</p>
           </div>
         </div>
-      </main>
-    </div>
-    <footer>
-      <p>Challeng by <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA" target="_blank">frontendmentor</a>. Coded by <a href="https://github.com/iamcerebrocerberus/" target="_blank">cerebro_cerberus</a>.</p>
+      </section>
+    </main>
+    <footer> 
+      <p>challenge by <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA" target="_blank">frontendmentor</a>. coded by <a href="https://github.com/iamcerebrocerberus/" target="_blank">cerebro_cerberus</a></p>
     </footer>
   </body>
 </html>
